@@ -1,6 +1,7 @@
 1.3.2 2011-??-??
 ========
  * win32 build fix
+ * improve compatibility with ionCube Loader
 
 1.3.1 2010-11-27
 ========
